Kubernetes/flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: flask-mongo
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
